--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,14 @@ dependencies:
   top_snackbar_flutter: ^3.2.0
   timeago: ^3.0.0
   flutter_rating_bar: ^4.0.0
+  url_launcher: ^6.1.12
+  video_player: ^2.4.5
+
+
+
+
+
+
 
 
 
